[package]
name = "viz"
version = "0.1.0"
authors = ["David King <dking@ketralnis.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.11"
anyhow = "1.0.31"
fftw = "0.6.2"

piston = "0.50.0"
piston2d-graphics = "0.36.0"
#piston2d-opengl_graphics = "0.72.0"
piston2d-glium_graphics = "*"

num-traits = "0.2.12"
