[package]
name = "viz"
version = "0.1.0"
authors = ["David King <dking@ketralnis.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.11"
anyhow = "1.0"
fftw = "0.6"

piston = "0.50"
piston2d-graphics = "0.36"
piston2d-opengl_graphics = "0.72"
pistoncore-glutin_window = "0.64"

num-traits = "0.2"
